@@ -332,7 +332,7 @@ config_path=$(calcConfigPath "${unified_src_abs}")
 if "${config_path}"/configure --target=${arche}-linux-uclibc \
         --with-cpu=${ISA_CPU} \
         --disable-fast-install --with-endian=${ARC_ENDIAN} \
-        --disable-werror --disable-multilib \
+        --disable-multilib \
         --enable-languages=c --prefix="${tmp_install_dir}" \
         --without-headers --enable-shared --disable-threads --disable-tls \
 	--disable-libssp --disable-libmudflap --without-newlib --disable-c99 \
@@ -461,7 +461,7 @@ cd "${build_dir}"
 config_path=$(calcConfigPath "${unified_src_abs}")
 if "${config_path}"/configure --target=${arche}-linux-uclibc \
         --with-cpu=${ISA_CPU} \
-        --disable-werror ${UCLIBC_DISABLE_MULTILIB} \
+        ${UCLIBC_DISABLE_MULTILIB} \
         --with-pkgversion="${version_str}"\
         --with-bugurl="${bugurl_str}" \
         --enable-fast-install=N/A  --with-endian=${ARC_ENDIAN} \
